fixed bug with circle element overflow hidden

--- a/softuni-creative-certificate-page/style.css
+++ b/softuni-creative-certificate-page/style.css
@@ -6,7 +6,6 @@ body {
     font-weight: 300;
     color: rgb(62, 61, 61);
     line-height: 1.3;
-    overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -20,7 +19,6 @@ header {
     align-items: center;
     padding: 5px 5%;
     box-shadow: -5px 14px 11px -13px rgba(0,0,0,0.75);
-    margin-bottom: 3%;
     background-color: white;
 }
 .logo-wrapper {
@@ -66,6 +64,8 @@ nav ul {
     justify-content: space-between;
     padding: 5px 6%;
     position: relative;
+    overflow: hidden;
+    padding-top: 3%;
 }
 .info-container {
     flex-basis: 65%;
@@ -73,6 +73,9 @@ nav ul {
 .additional-info {
     font-size: 0.8em;
     font-style: italic;
+}
+.diplomas-illustration {
+    overflow: hidden;
 }
 .circle {
     width: 430px;
@@ -177,28 +180,21 @@ nav ul {
 
 
 
-
-
-
-
-
-
-
-
-
-
 @media all and (max-width: 1200px) {
     header {
         display: block;
     }
 }
 
-/* @media all and (max-width: 1100px) {
+@media all and (max-width: 1100px) {
     nav ul {
         flex-direction: column;
     }
     .nav-list-item {
         margin: 10px;
     }
+    .circle {
+        display: none;
+    }
 }
- */
+
